Fix alignment in td

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -130,7 +130,7 @@ a#toggle-completed-versions {color:#999;}
 /***** Tables *****/
 table.list { border: 1px solid #e4e4e4;  border-collapse: collapse; width: 100%; margin-bottom: 4px; }
 table.list th {  background-color:#EEEEEE; padding: 4px; white-space:nowrap; }
-table.list td {text-align:center; vertical-align:top; padding-right:10px;}
+table.list td { vertical-align:top; padding-right:10px;}
 table.list td.id { width: 2%; text-align: center;}
 table.list td.name, table.list td.description, table.list td.subject, table.list td.comments, table.list td.roles {text-align: left;}
 table.list td.tick {width:15%}
